# car_metrics

./: .gitignore  .pre-commit-config.yaml  data_wrangling.ipynb  exploratory_analysis.ipynb  features_scrapping.py  pyproject.toml  scrapping.ipynb  url_scrapping.ipynb  url_scrapping.py  utils_data_wrangling.py
src/: features_scrapping.py  utils_data_wrangling.py  utils_features_scrapper.py
