[project]
name = "car-metrics"
version = "0.1.0"
description = "Personal project for buying a new car"
readme = "README.md"
requires-python = "==3.10.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "ipykernel==6.29.5",
    "nbformat==5.10.4",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "requests==2.32.3",
    "selenium==4.27.1",
    "tqdm==4.67.1",
]
